[tool.poetry]
name = "moreitertools"
version = "0.1.0"
description = ""
authors = ["John Sutherland <john@sneeu.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
black = "^22.12.0"
mypy = "^0.991"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
